--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "babel-runtime": "^6.0.0",
     "normalize.css": "^4.2.0",
     "semantic-ui": "^2.2.4",
-    "vue": "^1.0.21"
+    "vue": "^1.0.21",
+    "vue-router": "^0.7.13",
+    "vuex": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
