--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuex": "^1.0.0-rc.2"
   },
   "devDependencies": {
+    "array-filter": "^1.0.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.0.0",
@@ -47,6 +48,7 @@
     "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.12.0",
+    "jquery": "~2.1.4",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
@@ -63,7 +65,6 @@
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
     "webpack-merge": "^0.8.3",
-    "webpack-notifier": "^1.4.1",
-    "jquery": "~2.1.4"
+    "webpack-notifier": "^1.4.1"
   }
 }
