--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "semantic-ui": "^2.2.4",
     "vue": "^1.0.21",
     "vue-router": "^0.7.13",
-    "vuex": "^1.0.0-rc.2"
+    "vuex": "^1.0.0-rc.2",
+    "xscroll": "^3.1.2"
   },
   "devDependencies": {
     "array-filter": "^1.0.0",
