--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,21 @@
 {
-  "presets": ["es2015", "stage-2"],
-  "plugins": ["transform-runtime"],
-  "comments": false
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "safari >= 7"]
+      },
+      "loose": true
+    }],
+    "stage-0"
+  ],
+  "plugins": [
+    // https://github.com/59naga/babel-plugin-add-module-exports
+    "add-module-exports",
+    // http://babeljs.io/docs/plugins/transform-runtime/
+    "transform-runtime",
+    // https://www.npmjs.com/package/babel-plugin-component
+    ["component", [
+      { "libraryName": "mint-ui", "style": true }
+    ]]
+  ]
 }
