--- a/package.json
+++ b/package.json
@@ -5,59 +5,67 @@
   "author": "wjs <weijinsh@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "dev": "babel-node build/tasks/dev.js",
+    "dev-build": "babel-node build/tasks/dev-build.js",
+    "build": "babel-node build/tasks/build.js",
     "lint": "eslint --ext .js,.vue src",
     "deploy": "gh-pages -d dist",
     "xdeploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "core-js": "^2.4.1",
+    "fastclick": "^1.0.6",
     "animate.css": "^3.5.2",
     "normalize.css": "^5.0.0",
-    "vue": "^2.0.1",
-    "vue-router": "^2.0.1"
+    "lodash-es": "^4.17.4",
+    "vue": "2.1.10",
+    "vue-resource": "1.2.0",
+    "vue-router": "2.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-register": "^6.0.0",
+    "autoprefixer": "^6.7.3",
+    "babel-cli": "^6.23.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.3.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-component": "^0.9.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-stage-0": "^6.22.0",
     "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.7.1",
-    "eslint-config-standard": "^6.1.0",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.3.0",
-    "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-standard": "^2.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "function-bind": "^1.0.2",
-    "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.17.2",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.1",
+    "clean-webpack-plugin": "^0.1.15",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.15.0",
+    "eslint-config-standard": "^7.0.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
+    "inquirer": "^3.0.1",
+    "ip": "^1.1.4",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
-    "opn": "^4.0.2",
-    "ora": "^0.3.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.4",
+    "loader-utils": "0.2.16",
+    "lodash.get": "^4.0",
+    "lodash.keys": "^4.0",
+    "lodash.merge": "^4.0",
+    "lodash.pick": "^4.0",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "url-loader": "^0.5.7",
-    "vue-loader": "^9.4.0",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "vue-loader": "^11.1.0",
+    "vue-style-loader": "^2.0.0",
+    "vue-template-compiler": "2.1.10",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.0",
+    "zip-webpack-plugin": "^0.3.0"
   },
   "engines": {
     "node": ">= 4.0.0",
