--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev-build": "babel-node build/tasks/dev-build.js",
     "build": "babel-node build/tasks/build.js",
     "lint": "eslint --ext .js,.vue src",
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "deploy": "gh-pages -d dist",
     "xdeploy": "npm run build && gh-pages -d dist"
   },
@@ -32,9 +33,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-stage-0": "^6.22.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "clean-webpack-plugin": "^0.1.15",
     "connect-history-api-fallback": "^1.3.0",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
     "eslint-config-standard": "^7.0.1",
@@ -46,18 +49,26 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inquirer": "^3.0.1",
     "ip": "^1.1.4",
+    "karma": "^1.4.1",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon-chai": "^1.2.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^2.0.2",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "loader-utils": "0.2.16",
-    "lodash.get": "^4.0",
-    "lodash.keys": "^4.0",
-    "lodash.merge": "^4.0",
-    "lodash.pick": "^4.0",
+    "mocha": "^3.2.0",
     "progress-bar-webpack-plugin": "^1.9.3",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.0",
     "vue-style-loader": "^2.0.0",
@@ -65,6 +76,7 @@
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.0",
+    "webpack-merge": "^4.1.0",
     "zip-webpack-plugin": "^0.3.0"
   },
   "engines": {
