--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "babel-node build/tasks/dev.js",
     "dev-build": "babel-node build/tasks/dev-build.js",
-    "build": "babel-node build/tasks/build.js",
+    "build": "babel-node build/tasks/build.js && npm run build-comp",
+    "build-comp": "babel-node build/tasks/build-components.js",
     "lint": "eslint --ext .js,.vue src",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "deploy": "gh-pages -d dist",
@@ -49,6 +50,7 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "fs-extra": "^2.1.2",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
